# skills-assessment

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/skills/create-github-issue/: SKILL.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/accounts/: models.py  serializers.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
backend/portfolio/migrations/: 0001_initial.py  0002_alter_activity_options_and_more.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/e2e/: create-activity.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/features/activities/: ActivitiesPage.tsx  ActivitiesTable.tsx  ActivityForm.tsx  SkillLevelBadge.tsx  queries.ts
frontend/src/features/auth/: AuthContext.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/features/skills/: SkillsPage.tsx
frontend/src/lib/: api.ts  types.ts
