[project]
name = "skills-portfolio-backend"
version = "0.1.0"
description = "Backend API for the skills portfolio app"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "djoser>=2.2",
    "djangorestframework-simplejwt>=5.3",
    "django-filter>=24.1",
    "psycopg[binary]>=3.1",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
    "whitenoise>=6.6",
]

[tool.setuptools]
py-modules = []
